# VitraePluginFormGeneration

./: CMakeLists.txt  README.md
include/VitraePluginFormGeneration/: Setup.hpp
include/VitraePluginFormGeneration/Standard/: Params.hpp
include/VitraePluginFormGeneration/generators/: meshNormals.hpp  meshTangents.hpp  modelSilhouette.hpp
src/: Setup.cpp
